chapters: update and add STP and BPDU appendix

--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -168,6 +168,7 @@ more /etc/services
     \item Explain briefly the purposes of the following \lstinline{tcpdump} expressions.
     \end{report}
 
+    % todo: make sample traffic
     If you are using \lstinline{tcpdump}, explain the following filters:
     \begin{itemize}
         \item \lstinline{tcpdump udp port 520}
