update readme and multicast chapter

--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -70,7 +70,7 @@
     \begin{lstlisting}[emph=eth0]
 route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
     \end{lstlisting}
-    Execute this command on all hosts.
+    \textbf{Execute this command on all hosts}.
 
     Save the new routing table.
     
