--- a/UTNetLabBase.cls
+++ b/UTNetLabBase.cls
@@ -26,6 +26,7 @@
 \RequirePackage{array}
 \RequirePackage{kvoptions}
 \usetikzlibrary{calc,positioning}
+\usepackage{indentfirst}
 
 \DeclareDefaultOption{\PassOptionsToClass{\CurrentOption}{article}}
 \ProcessKeyvalOptions*
